[package]
name = "libbft-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
libbft = { version = "0.1.0", path = "../libbft" }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.23"
