[package]
name = "libbft-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
libbft = { version = "0.1.0", path = "../libbft" }
libbft-network = { version = "0.1.0", path = "../libbft-network" }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.1"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.31.0"
tokio = { version = "1.51.1", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = ["v4"] }
