[package]
name = "libbft-network"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
futures-util = "0.3.32"
libbft = { version = "0.1.0", path = "../libbft" }
opentelemetry = "0.31.0"
tokio = { version = "1.52.0", features = ["macros", "net", "sync"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
