[package]
name = "libbft"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
anyhow = "1.0.102"
borsh = { version = "1.6.1", features = ["derive"] }
bytes = "1.11.1"
derive-where = "1.6.1"
hex = "0.4.3"
metrics = "0.24.3"
tokio = { version = "1.51.1", features = ["macros", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
